--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <img src="./img/80.jpg" alt="80 - Eli">
             <img src="./img/81.jpg" alt="81 - Itsaso / Aosta (Italia)">
             <img src="./img/82.jpg" alt="82 - Eli / Caravia">
-            <img src="./img/83.jpg" alt="83 - Iñigo / Zierrei">
+            <img src="./img/83.jpg" alt="83 - Iñigo / Gerrike">
             <img src="./img/84.jpg" alt="84 - Saioa / Mendexa">
             <img src="./img/85.jpg" alt="85 - Aritz / La Bañeza">
             <img src="./img/86.jpg" alt="86 - Aritz / La Bañeza">
@@ -162,7 +162,7 @@
             <img src="./img/149.jpg" alt="149 - Oier / Cicero">
             <img src="./img/150.jpg" alt="150 - Aiora / Zarautz">
             <img src="./img/151.jpg" alt="151 - Andoni O / Noja">
-            <img src="./img/152.jpg" alt="152 - Iban A / Argoños">
+            <img src="./img/152.jpg" alt="152 - Iban / Argoños">
             <img src="./img/153.jpg" alt="153 - Esti / Santander">
             <img src="./img/154.jpg" alt="154 - Esti / Santander">
             <img src="./img/155.jpg" alt="155 - Esti / Santander">
@@ -187,8 +187,8 @@
             <img src="./img/174.jpg" alt="174 - Itsaso / Riquewihr">
             <img src="./img/175.jpg" alt="175 - Ander">
             <img src="./img/176.jpg" alt="176 - Esti / Helgueras">
-            <img src="./img/177.jpg" alt="177 - Ander / Argoños">
-            <img src="./img/178.jpg" alt="178 - Ander / Argoños">
+            <img src="./img/177.jpg" alt="177 - Iban / Argoños">
+            <img src="./img/178.jpg" alt="178 - Iban / Argoños">
             <img src="./img/179.jpg" alt="179 - Aritz / Lavra">
             <img src="./img/180.jpg" alt="180 - Aintzane / Castro-Urdiales">
             <img src="./img/181.jpg" alt="181 - Eli M / Tarifa">
@@ -207,9 +207,9 @@
             <img src="./img/194.jpg" alt="194 - Oier / Markina-Xemein">
             <img src="./img/195.jpg" alt="195 - Nerea / Noja">
             <img src="./img/196.jpg" alt="196 - Eli M / Bolonia">
-            <img src="./img/197.jpg" alt="197 - Andoni O / Matienzo">
+            <img src="./img/197.jpg" alt="197 - Andoni O / Solorzano">
             <img src="./img/198.jpg" alt="198 - Aintzane / Ipaster">
-            <img src="./img/199.jpg" alt="199 - Andoni O / Solorzano">
+            <img src="./img/199.jpg" alt="199 - Andoni O / Hoznayo">
             <img src="./img/200.jpg" alt="200 - Eli M / Barbate">
             <img src="./img/201.jpg" alt="201 - Aintzane / Lezama">
             <img src="./img/202.jpg" alt="202 - Jon / Bilbo">
@@ -245,6 +245,34 @@
             <img src="./img/232.jpg" alt="232 - Esti / Zahara de los Atunes">
             <img src="./img/233.jpg" alt="233 - Esti / Zahara de los Atunes">
             <img src="./img/234.jpg" alt="234 - Iñigo / Ondarru">
+            <img src="./img/235.jpg" alt="235 - Jose Jabier / Kolonbia">
+            <img src="./img/236.jpg" alt="236 - Iñigo / Markina-Xemein">
+            <img src="./img/237.jpg" alt="237 - Esti / Cádiz">
+            <img src="./img/238.jpg" alt="238 - Aiora / Bilbo">
+            <img src="./img/239.jpg" alt="239 - Aintzane / Noja">
+            <img src="./img/240.jpg" alt="240 - Andoni / Noja">
+            <img src="./img/241.jpg" alt="241 - Andoni / Noja">
+            <img src="./img/242.jpg" alt="242 - Iñigo / Iurreta">
+            <img src="./img/243.jpg" alt="243 - Iñigo / Zierrei">
+            <img src="./img/244.jpg" alt="244 - Iñigo / Arta">
+            <img src="./img/245.jpg" alt="245 - Esti / Ceuta">
+            <img src="./img/246.jpg" alt="246 - Iñigo / Ondarru">
+            <img src="./img/247.jpg" alt="247 - Iban / Amoroto">
+            <img src="./img/248.jpg" alt="248 - Esti / Kordoba">
+            <img src="./img/249.jpg" alt="249 - Aimar / Ibiza">
+            <img src="./img/250.jpg" alt="250 - Aintzane / Noja">
+            <img src="./img/251.jpg" alt="251 - Aritz / Ribadesella">
+            <img src="./img/252.jpg" alt="252 - Aimar / Ribadesella">
+            <img src="./img/253.jpg" alt="253 - Ander / Mutriku">
+            <img src="./img/254.jpg" alt="254 - Andoni / Zeinke">
+            <img src="./img/255.jpg" alt="255 - Iñigo / Arta">
+            <img src="./img/256.jpg" alt="256 - Iban / Meruelo">
+            <img src="./img/257.jpg" alt="257 - Iban / Meruelo">
+            <img src="./img/258.jpg" alt="258 - Esti / Bilbo">
+            <img src="./img/259.jpg" alt="259 - Aintzane / Barakaldo">
+            <img src="./img/260.jpg" alt="260 - Ander / Zarautz">
+            <img src="./img/261.jpg" alt="261 - Aimar / Ibiza">
+            <img src="./img/262.jpg" alt="262 - Esti / Markina-Xemein">
         </section>
         <section id="contenedor-principal">
             <div id="contenedor-interno">
