--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
             <img src="./img/65.jpg" alt="65 - Iban / San Miguel de Meruelo">
             <img src="./img/66.jpg" alt="66 - Saioa / Mendexa">
             <img src="./img/67.jpg" alt="67 - Saioa / Mendexa">
-            <img src="./img/68.jpg" alt="68 - Eli / Cabezón de la Sal">
-            <img src="./img/69.jpg" alt="69 - Eli / Unquera" >
+            <img src="./img/68.jpg" alt="68 - Eli E / Cabezón de la Sal">
+            <img src="./img/69.jpg" alt="69 - Eli E / Unquera" >
             <img src="./img/70.jpg" alt="70 - Aritz / Markina-Xemein">
             <img src="./img/71.jpg" alt="71 - Itsaso / Aosta (Italia)">
             <img src="./img/72.jpg" alt="72 - Ander / Aosta (Italia)">
@@ -87,12 +87,12 @@
             <img src="./img/74.jpg" alt="74 - Itsaso">
             <img src="./img/75.jpg" alt="75 - Nerea / Markina-Xemein">
             <img src="./img/76.jpg" alt="76 - Iban / Noja">
-            <img src="./img/77.jpg" alt="77 - Eli / Gijon">
-            <img src="./img/78.jpg" alt="78 - Eli">
-            <img src="./img/79.jpg" alt="79 - Eli">
-            <img src="./img/80.jpg" alt="80 - Eli">
+            <img src="./img/77.jpg" alt="77 - Eli E / Gijon">
+            <img src="./img/78.jpg" alt="78 - Eli E">
+            <img src="./img/79.jpg" alt="79 - Eli E">
+            <img src="./img/80.jpg" alt="80 - Eli E">
             <img src="./img/81.jpg" alt="81 - Itsaso / Aosta (Italia)">
-            <img src="./img/82.jpg" alt="82 - Eli / Caravia">
+            <img src="./img/82.jpg" alt="82 - Eli E / Caravia">
             <img src="./img/83.jpg" alt="83 - Iñigo / Gerrike">
             <img src="./img/84.jpg" alt="84 - Saioa / Mendexa">
             <img src="./img/85.jpg" alt="85 - Aritz / La Bañeza">
@@ -137,7 +137,7 @@
             <img src="./img/124.jpg" alt="124 - Aintzane / Noja">
             <img src="./img/125.jpg" alt="125 - Andoni O / Matiena">
             <img src="./img/126.jpg" alt="126 - Oier / Caravia">
-            <img src="./img/127.jpg" alt="127 - Eli / Caravia">
+            <img src="./img/127.jpg" alt="127 - Eli E / Caravia">
             <img src="./img/128.jpg" alt="128 - Ander / Gengenbach (Alemania)">
             <img src="./img/129.jpg" alt="129 - Ander / Gengenbach (Alemania)">
             <img src="./img/130.jpg" alt="130 - Ander / Gengenbach (Alemania)">
@@ -145,7 +145,7 @@
             <img src="./img/132.jpg" alt="132 - Andoni O / Durango">
             <img src="./img/133.jpg" alt="133 - Oier / Ribadesella">
             <img src="./img/134.jpg" alt="134 - Andoni O / Durango">
-            <img src="./img/135.jpg" alt="135 - Eli / Ribadesella">
+            <img src="./img/135.jpg" alt="135 - Eli E / Ribadesella">
             <img src="./img/136.jpg" alt="136 - Esti / Santander">
             <img src="./img/137.jpg" alt="137 - Esti / Santander">
             <img src="./img/138.jpg" alt="138 - Ander / Baden-Baden">
@@ -221,10 +221,10 @@
             <img src="./img/208.jpg" alt="208 - Iban / Bien Aparecida">
             <img src="./img/209.jpg" alt="209 - Ander / Deba">
             <img src="./img/210.jpg" alt="210 - Aure / Deba">
-            <img src="./img/211.jpg" alt="211 - Eli / Zeinke">
-            <img src="./img/212.jpg" alt="212 - Eli / Zeinke">
-            <img src="./img/213.jpg" alt="213 - Eli / Zeinke">
-            <img src="./img/214.jpg" alt="214 - Eli / Zeinke">
+            <img src="./img/211.jpg" alt="211 - Eli E / Zeinke">
+            <img src="./img/212.jpg" alt="212 - Eli E / Zeinke">
+            <img src="./img/213.jpg" alt="213 - Eli E / Zeinke">
+            <img src="./img/214.jpg" alt="214 - Eli E / Zeinke">
             <img src="./img/215.jpg" alt="215 - Iñigo / Ondarru">
             <img src="./img/216.jpg" alt="216 - Iñigo / Ondarru">
             <img src="./img/217.jpg" alt="217 - Iñigo / Ondarru">
@@ -273,6 +273,19 @@
             <img src="./img/260.jpg" alt="260 - Ander / Zarautz">
             <img src="./img/261.jpg" alt="261 - Aimar / Ibiza">
             <img src="./img/262.jpg" alt="262 - Esti / Markina-Xemein">
+            <img src="./img/263.jpg" alt="263 - Iñigo">
+            <img src="./img/264.jpg" alt="264 - Iñigo">
+            <img src="./img/265.jpg" alt="265 - Iñigo">
+            <img src="./img/266.jpg" alt="266 - Iñigo">
+            <img src="./img/267.jpg" alt="267 - Iñigo">
+            <img src="./img/268.jpg" alt="268 - Iñigo">
+            <img src="./img/269.jpg" alt="269 - Itsaso / Deba">
+            <img src="./img/270.jpg" alt="270 - Eli M / Catoira">
+            <img src="./img/271.jpg" alt="271 - Iñigo / Ondarru">
+            <img src="./img/272.jpg" alt="272 - Andoni / Zeinke">
+            <img src="./img/273.jpg" alt="273 - Andoni / Zeinke">
+            <img src="./img/274.jpg" alt="274 - Aimar / Amorebieta">
+            <img src="./img/275.jpg" alt="275 - Aintzane / Markina-Xemein">
         </section>
         <section id="contenedor-principal">
             <div id="contenedor-interno">
