--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Faro Biribillek</title>
-    <link rel="stylesheet" href="./css/main.css">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Trirong">    
+	<link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
     <main>
@@ -233,9 +234,9 @@
             <img src="./img/220.jpg" alt="220 - Aintzane / Noja">
             <img src="./img/221.jpg" alt="221 - Nerea / Somo">
             <img src="./img/222.jpg" alt="222 - Ainara / Saturraran">
-            <img src="./img/223.jpg" alt="223 - Iñigo / Gerrika">
-            <img src="./img/224.jpg" alt="224 - Iñigo / Gerrika">
-            <img src="./img/225.jpg" alt="225 - Iñigo / Gerrika">
+            <img src="./img/223.jpg" alt="223 - Iñigo / Gerrike">
+            <img src="./img/224.jpg" alt="224 - Iñigo / Gerrike">
+            <img src="./img/225.jpg" alt="225 - Iñigo / Gerrike">
             <img src="./img/226.jpg" alt="226 - Aritz / Baiona">
             <img src="./img/227.jpg" alt="227 - Andoni O">
             <img src="./img/228.jpg" alt="228 - Esti / Cádiz">
@@ -286,6 +287,56 @@
             <img src="./img/273.jpg" alt="273 - Andoni / Zeinke">
             <img src="./img/274.jpg" alt="274 - Aimar / Amorebieta">
             <img src="./img/275.jpg" alt="275 - Aintzane / Markina-Xemein">
+            <img src="./img/276.jpg" alt="276 - Itsaso / Deba">
+            <img src="./img/277.jpg" alt="277 - Itsaso / Deba">
+            <img src="./img/278.jpg" alt="278 - Aintzane / Bariña">
+            <img src="./img/279.jpg" alt="279 - Andoni O">
+            <img src="./img/280.jpg" alt="280 - Andoni O">
+            <img src="./img/281.jpg" alt="281 - Andoni O">
+            <img src="./img/282.jpg" alt="282 - Andoni O">
+            <img src="./img/283.jpg" alt="283 - Iban / Etxebarria">
+            <img src="./img/284.jpg" alt="284 - Aiora / Madril">
+            <img src="./img/285.jpg" alt="285 - Iban / Etxebarria">
+            <img src="./img/286.jpg" alt="286 - Oier / Zeinke">
+            <img src="./img/287.jpg" alt="287 - Iñigo / Trabakua">
+            <img src="./img/288.jpg" alt="288 - Jose Jabier / Zeinke">
+            <img src="./img/289.jpg" alt="289 - Aiora / Lerma">
+            <img src="./img/290.jpg" alt="290 - Aiora / Miranda de Ebro">
+            <img src="./img/291.jpg" alt="291 - Iñigo / Nabarniz">
+            <img src="./img/292.jpg" alt="292 - Jon / Markina-Xemein">
+            <img src="./img/293.jpg" alt="293 - Iñigo / Bilbo">
+            <img src="./img/294.jpg" alt="294 - Iñigo / Bilbo">
+            <img src="./img/295.jpg" alt="295 - Iñigo / Bilbo">
+            <img src="./img/296.jpg" alt="296 - Iñigo / Bilbo">
+            <img src="./img/297.jpg" alt="297 - Jose Jabier / Bermeo">
+            <img src="./img/298.jpg" alt="298 - Iñigo / Bilbo">
+            <img src="./img/299.jpg" alt="299 - Aure / Markina-Xemein">
+            <img src="./img/300.jpg" alt="300 - Ander / Deba">
+            <img src="./img/301.jpg" alt="301 - Esti / Berriz">
+            <img src="./img/302.jpg" alt="302 - Iñigo / Gerrike">
+            <img src="./img/303.jpg" alt="303 - Nerea / Iruzubitxe">
+            <img src="./img/304.jpg" alt="304 - Nerea / Iruzubitxe">
+            <img src="./img/305.jpg" alt="305 - Nerea / Iruzubitxe">
+            <img src="./img/306.jpg" alt="306 - Nerea / Iruzubitxe">
+            <img src="./img/307.jpg" alt="307 - Esti / Iruzubitxe">
+            <img src="./img/308.jpg" alt="308 - Esti / Iruzubitxe">
+            <img src="./img/309.jpg" alt="309 - Esti / Iruzubitxe">
+            <img src="./img/310.jpg" alt="310 - Nerea / Iruzubitxe">
+            <img src="./img/311.jpg" alt="311 - Iban / Markina-Xemein">
+            <img src="./img/312.jpg" alt="312 - Iban / Markina-Xemein">
+            <img src="./img/313.jpg" alt="313 - Iban / Markina-Xemein">
+            <img src="./img/314.jpg" alt="314 - Iban / Markina-Xemein">
+            <img src="./img/315.jpg" alt="315 - Aure / Markina-Xemein">
+            <img src="./img/316.jpg" alt="316 - Iñigo / Ondarru">
+            <img src="./img/317.jpg" alt="317 - Itsaso / Deba">
+            <img src="./img/318.jpg" alt="318 - Andoni O">
+            <img src="./img/319.jpg" alt="319 - Andoni O">
+            <img src="./img/320.jpg" alt="320 - Iñigo / Markina-Xemein">
+            <img src="./img/321.jpg" alt="321 - Iñigo / Markina-Xemein">
+            <img src="./img/322.jpg" alt="322 - Iñigo / Markina-Xemein">
+            <img src="./img/323.jpg" alt="323 - Eli E / Markina-Xemein">
+            <img src="./img/324.jpg" alt="324 - Eli E / Gerrike">
+            <img src="./img/325.jpg" alt="325 - Eli E / Zierrei">
         </section>
         <section id="contenedor-principal">
             <div id="contenedor-interno">
