--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <main>
         <section id="galeria">
-            <img src="./img/0.jpg" alt="0 - Jose Jabier / Abadiño">
+            <img src="./img/0.jpg" alt="0 - Jose Jabier / Matiena">
             <img src="./img/1.jpg" alt="1 - Jon / Hungria">
             <img src="./img/2.jpg" alt="2 - Jon / Hungria">
             <img src="./img/3.jpg" alt="3 - Jon / Hungria">
@@ -71,11 +71,11 @@
             <img src="./img/57.jpg" alt="57 - Andoni O / Karraspio">
             <img src="./img/58.jpg" alt="58 - Ander / Briancon (Frantzia)">
             <img src="./img/59.jpg" alt="59 - Ander / Nevache (Frantzia)">
-            <img src="./img/60.jpg" alt="60 - Ander / Briancon (Frantzia)">
-            <img src="./img/61.jpg" alt="61 - Ander / Briancon (Frantzia)">
-            <img src="./img/62.jpg" alt="62 - Ander / Briancon (Frantzia)">
-            <img src="./img/63.jpg" alt="63 - Ander / Briancon (Frantzia)">
-            <img src="./img/64.jpg" alt="64 - Ander / Briancon (Frantzia)">
+            <img src="./img/60.jpg" alt="60 - Ander / Briançon (Frantzia)">
+            <img src="./img/61.jpg" alt="61 - Ander / Briançon (Frantzia)">
+            <img src="./img/62.jpg" alt="62 - Ander / Briançon (Frantzia)">
+            <img src="./img/63.jpg" alt="63 - Ander / Briançon (Frantzia)">
+            <img src="./img/64.jpg" alt="64 - Ander / Briançon (Frantzia)">
             <img src="./img/65.jpg" alt="65 - Iban / San Miguel de Meruelo">
             <img src="./img/66.jpg" alt="66 - Saioa / Mendexa">
             <img src="./img/67.jpg" alt="67 - Saioa / Mendexa">
@@ -337,6 +337,49 @@
             <img src="./img/323.jpg" alt="323 - Eli E / Markina-Xemein">
             <img src="./img/324.jpg" alt="324 - Eli E / Gerrike">
             <img src="./img/325.jpg" alt="325 - Eli E / Zierrei">
+            <img src="./img/326.jpg" alt="326 - Iñigo / Markina-Xemein">
+            <img src="./img/327.jpg" alt="327 - Iñigo / Markina-Xemein">
+            <img src="./img/328.jpg" alt="328 - Andoni O">
+            <img src="./img/329.jpg" alt="329 - Nerea / Karraspio">
+            <img src="./img/330.jpg" alt="330 - Nerea / Lekeitio">
+            <img src="./img/331.jpg" alt="331 - Nerea / Markina-Xemein">
+            <img src="./img/332.jpg" alt="332 - Nerea / Karraspio">
+            <img src="./img/333.jpg" alt="333 - Iban / Etxebarria">
+            <img src="./img/334.jpg" alt="334 - Iban / Etxebarria">
+            <img src="./img/335.jpg" alt="335 - Nerea / Mendata">
+            <img src="./img/336.jpg" alt="336 - Itsaso / Orio">
+            <img src="./img/337.jpg" alt="337 - Aintzane">
+            <img src="./img/338.jpg" alt="338 - Iñigo / Amorebieta">
+            <img src="./img/339.jpg" alt="339 - Iñigo / Amorebieta">
+            <img src="./img/340.jpg" alt="340 - Iñigo / Iurreta">
+            <img src="./img/341.jpg" alt="341 - Iñigo / Amorebieta">
+            <img src="./img/342.jpg" alt="342 - Iñigo / Amorebieta">
+            <img src="./img/343.jpg" alt="343 - Iñigo / Matiena">
+            <img src="./img/344.jpg" alt="344 - Iñigo / Amorebieta">
+            <img src="./img/345.jpg" alt="345 - Nerea / Eibar">
+            <img src="./img/346.jpg" alt="346 - Iñigo / Durango">
+            <img src="./img/347.jpg" alt="347 - Iñigo / Durango">
+            <img src="./img/348.jpg" alt="348 - Iñigo / Durango">
+            <img src="./img/349.jpg" alt="349 - Iñigo / Durango">
+            <img src="./img/350.jpg" alt="350 - Saioa / Lekitxo">
+            <img src="./img/351.jpg" alt="351 - Iñigo / Trabakua">
+            <img src="./img/352.jpg" alt="352 - Iñigo">
+            <img src="./img/353.jpg" alt="353 - Aimar">
+            <img src="./img/354.jpg" alt="354 - Aimar">
+            <img src="./img/355.jpg" alt="355 - Iñigo / Matiena">
+            <img src="./img/356.jpg" alt="356 - Iñigo / Bilbo">
+            <img src="./img/357.jpg" alt="357 - Ander / Deba">
+            <img src="./img/358.jpg" alt="358 - Iban / Markina-Xemein">
+            <img src="./img/359.jpg" alt="359 - Iñigo / Bilbo">
+            <img src="./img/360.jpg" alt="360 - Ander / Deba">
+            <img src="./img/361.jpg" alt="361 - Iñigo / Markina-Xemein">
+            <img src="./img/362.jpg" alt="362 - Iñigo / Markina-Xemein">
+            <img src="./img/363.jpg" alt="363 - Nerea / Lekitxo">
+            <img src="./img/364.jpg" alt="364 - Saioa / Leagi">
+            <img src="./img/365.jpg" alt="365 - Aintzane / Biarritz">
+            <img src="./img/366.jpg" alt="366 - Aintzane / Biarritz">
+            <img src="./img/367.jpg" alt="367 - Aintzane / Biarritz">
+            <img src="./img/368.jpg" alt="368 - Aintzane / Bidart">
         </section>
         <section id="contenedor-principal">
             <div id="contenedor-interno">
