--- a/index.html
+++ b/index.html
@@ -12,23 +12,23 @@
     <main>
         <section id="galeria">
             <img src="./img/0.jpg" alt="0 - Jose Jabier / Matiena">
-            <img src="./img/1.jpg" alt="1 - Jon / Hungria">
-            <img src="./img/2.jpg" alt="2 - Jon / Hungria">
-            <img src="./img/3.jpg" alt="3 - Jon / Hungria">
+            <img src="./img/1.jpg" alt="1 - Jon / Kecskemét (Hungria)">
+            <img src="./img/2.jpg" alt="2 - Jon / Kecskemét (Hungria)">
+            <img src="./img/3.jpg" alt="3 - Jon / Kecskemét (Hungria)">
             <img src="./img/4.jpg" alt="4 - Andoni O / Iruzubitxe">
             <img src="./img/5.jpg" alt="5 - Aure / Markina-Xemein">
-            <img src="./img/6.jpg" alt="6 - Jon / Hungria">
+            <img src="./img/6.jpg" alt="6 - Jon / Kecskemét (Hungria)">
             <img src="./img/7.jpg" alt="7 - Aure / Ondarru">
             <img src="./img/8.jpg" alt="8 - Aimar / Markina-Xemein">
-            <img src="./img/9.jpg" alt="9 - Jon / Hungria">
-            <img src="./img/10.jpg" alt="10 - Jon / Hungria">
+            <img src="./img/9.jpg" alt="9 - Jon / Kecskemét (Hungria)">
+            <img src="./img/10.jpg" alt="10 - Jon / Kecskemét (Hungria)">
             <img src="./img/11.jpg" alt="11 - Aimar / Markina-Xemein">
             <img src="./img/12.jpg" alt="12 - Iban / Ipaster">
             <img src="./img/13.jpg" alt="13 - Andoni O / Zierrei">
-            <img src="./img/14.jpg" alt="14 - Jon / Hungria">
-            <img src="./img/15.jpg" alt="15 - Jon / Hungria">
-            <img src="./img/16.jpg" alt="16 - Jon / Hungria">
-            <img src="./img/17.jpg" alt="17 - Jon / Hungria">
+            <img src="./img/14.jpg" alt="14 - Jon / Kecskemét (Hungria)">
+            <img src="./img/15.jpg" alt="15 - Jon / Kecskemét (Hungria)">
+            <img src="./img/16.jpg" alt="16 - Jon / Kecskemét (Hungria)">
+            <img src="./img/17.jpg" alt="17 - Jon / Kecskemét (Hungria)">
             <img src="./img/18.jpg" alt="18 - Itsaso / Usurbil">
             <img src="./img/19.jpg" alt="19 - Aintzane / Zornotza">
             <img src="./img/20.jpg" alt="20 - Nerea / Gernika">
@@ -48,12 +48,12 @@
             <img src="./img/34.jpg" alt="34 - Aintzane / L'Ampolla">
             <img src="./img/35.jpg" alt="35 - Aure / Ondarru">
             <img src="./img/36.jpg" alt="36 - Aintzane">
-            <img src="./img/37.jpg" alt="37 - Saioa / Mendexa">
+            <img src="./img/37.jpg" alt="37 - Saioa / Leagi">
             <img src="./img/38.jpg" alt="38 - Andoni O / Zeinke">
-            <img src="./img/39.jpg" alt="39 - Saioa / Mendexa">
+            <img src="./img/39.jpg" alt="39 - Saioa / Leagi">
             <img src="./img/40.jpg" alt="40 - Iñigo / Berriatua">
             <img src="./img/41.jpg" alt="41 - Jon / Markina-Xemein">
-            <img src="./img/42.jpg" alt="42 - Saioa / Mendexa">
+            <img src="./img/42.jpg" alt="42 - Saioa / Leagi">
             <img src="./img/43.jpg" alt="43 - Itsaso / Deba">
             <img src="./img/44.jpg" alt="44 - Iban / Etxebarria">
             <img src="./img/45.jpg" alt="45 - Aritz / Bañares">
@@ -77,8 +77,8 @@
             <img src="./img/63.jpg" alt="63 - Ander / Briançon (Frantzia)">
             <img src="./img/64.jpg" alt="64 - Ander / Briançon (Frantzia)">
             <img src="./img/65.jpg" alt="65 - Iban / San Miguel de Meruelo">
-            <img src="./img/66.jpg" alt="66 - Saioa / Mendexa">
-            <img src="./img/67.jpg" alt="67 - Saioa / Mendexa">
+            <img src="./img/66.jpg" alt="66 - Saioa / Leagi">
+            <img src="./img/67.jpg" alt="67 - Saioa / Leagi">
             <img src="./img/68.jpg" alt="68 - Eli E / Cabezón de la Sal">
             <img src="./img/69.jpg" alt="69 - Eli E / Unquera" >
             <img src="./img/70.jpg" alt="70 - Aritz / Markina-Xemein">
@@ -94,8 +94,8 @@
             <img src="./img/80.jpg" alt="80 - Eli E">
             <img src="./img/81.jpg" alt="81 - Itsaso / Aosta (Italia)">
             <img src="./img/82.jpg" alt="82 - Eli E / Caravia">
-            <img src="./img/83.jpg" alt="83 - Iñigo / Gerrike">
-            <img src="./img/84.jpg" alt="84 - Saioa / Mendexa">
+            <img src="./img/83.jpg" alt="83 - Iñigo / Gerrika">
+            <img src="./img/84.jpg" alt="84 - Saioa / Leagi">
             <img src="./img/85.jpg" alt="85 - Aritz / La Bañeza">
             <img src="./img/86.jpg" alt="86 - Aritz / La Bañeza">
             <img src="./img/87.jpg" alt="87 - Nerea / Iruzubitxe">
@@ -149,14 +149,14 @@
             <img src="./img/135.jpg" alt="135 - Eli E / Ribadesella">
             <img src="./img/136.jpg" alt="136 - Esti / Santander">
             <img src="./img/137.jpg" alt="137 - Esti / Santander">
-            <img src="./img/138.jpg" alt="138 - Ander / Baden-Baden">
-            <img src="./img/139.jpg" alt="139 - Itsaso / Schiltach">
-            <img src="./img/140.jpg" alt="140 - Itsaso / Schiltach">
-            <img src="./img/141.jpg" alt="141 - Itsaso / Schiltach">
-            <img src="./img/142.jpg" alt="142 - Itsaso / Schiltach">
-            <img src="./img/143.jpg" alt="143 - Itsaso / Gengenbach">
-            <img src="./img/144.jpg" alt="144 - Itsaso / Gengenbach">
-            <img src="./img/145.jpg" alt="145 - Itsaso / Baden-Baden">
+            <img src="./img/138.jpg" alt="138 - Ander / Baden-Baden (Alemania)">
+            <img src="./img/139.jpg" alt="139 - Itsaso / Schiltach (Alemania)">
+            <img src="./img/140.jpg" alt="140 - Itsaso / Schiltach (Alemania)">
+            <img src="./img/141.jpg" alt="141 - Itsaso / Schiltach (Alemania)">
+            <img src="./img/142.jpg" alt="142 - Itsaso / Schiltach (Alemania)">
+            <img src="./img/143.jpg" alt="143 - Itsaso / Gengenbach (Alemania)">
+            <img src="./img/144.jpg" alt="144 - Itsaso / Gengenbach (Alemania)">
+            <img src="./img/145.jpg" alt="145 - Itsaso / Baden-Baden (Alemania)">
             <img src="./img/146.jpg" alt="146 - Oier">
             <img src="./img/147.jpg" alt="147 - Iban / Noja">
             <img src="./img/148.jpg" alt="148 - Iban / Noja ">
@@ -167,30 +167,30 @@
             <img src="./img/153.jpg" alt="153 - Esti / Santander">
             <img src="./img/154.jpg" alt="154 - Esti / Santander">
             <img src="./img/155.jpg" alt="155 - Esti / Santander">
-            <img src="./img/156.jpg" alt="156 - Aritz / Oporto">
-            <img src="./img/157.jpg" alt="157 - Aritz / Oporto">
-            <img src="./img/158.jpg" alt="158 - Aritz / Oporto">
-            <img src="./img/159.jpg" alt="159 - Aritz / Oporto">
-            <img src="./img/160.jpg" alt="160 - Aritz / Oporto">
+            <img src="./img/156.jpg" alt="156 - Aritz / Oporto (Portugal)">
+            <img src="./img/157.jpg" alt="157 - Aritz / Oporto (Portugal)">
+            <img src="./img/158.jpg" alt="158 - Aritz / Oporto (Portugal)">
+            <img src="./img/159.jpg" alt="159 - Aritz / Oporto (Portugal)">
+            <img src="./img/160.jpg" alt="160 - Aritz / Oporto (Portugal)">
             <img src="./img/161.jpg" alt="161 - Andoni O / Noja">
-            <img src="./img/162.jpg" alt="162 - Ander / Estrasburgo">
+            <img src="./img/162.jpg" alt="162 - Ander / Estrasburgo (Frantzia)">
             <img src="./img/163.jpg" alt="163 - Esti / Santander">
             <img src="./img/164.jpg" alt="164 - Esti / Santander">
             <img src="./img/165.jpg" alt="165 - Esti / Santander">
             <img src="./img/166.jpg" alt="166 - Esti / Santander">
             <img src="./img/167.jpg" alt="167 - Aintzane / Noja">
             <img src="./img/168.jpg" alt="168 - Aintzane / Noja">
-            <img src="./img/169.jpg" alt="169 - Ander / Riquewihr">
-            <img src="./img/170.jpg" alt="170 - Ander / Riquewihr">
-            <img src="./img/171.jpg" alt="171 - Itsaso / Riquewihr">
-            <img src="./img/172.jpg" alt="172 - Itsaso / Riquewihr">
-            <img src="./img/173.jpg" alt="173 - Itsaso / Riquewihr">
-            <img src="./img/174.jpg" alt="174 - Itsaso / Riquewihr">
+            <img src="./img/169.jpg" alt="169 - Ander / Riquewihr (Frantzia)">
+            <img src="./img/170.jpg" alt="170 - Ander / Riquewihr (Frantzia)">
+            <img src="./img/171.jpg" alt="171 - Itsaso / Riquewihr (Frantzia)">
+            <img src="./img/172.jpg" alt="172 - Itsaso / Riquewihr (Frantzia)">
+            <img src="./img/173.jpg" alt="173 - Itsaso / Riquewihr (Frantzia)">
+            <img src="./img/174.jpg" alt="174 - Itsaso / Riquewihr (Frantzia)">
             <img src="./img/175.jpg" alt="175 - Ander">
             <img src="./img/176.jpg" alt="176 - Esti / Helgueras">
             <img src="./img/177.jpg" alt="177 - Iban / Argoños">
             <img src="./img/178.jpg" alt="178 - Iban / Argoños">
-            <img src="./img/179.jpg" alt="179 - Aritz / Lavra">
+            <img src="./img/179.jpg" alt="179 - Aritz / Lavra (Portugal)">
             <img src="./img/180.jpg" alt="180 - Aintzane / Castro-Urdiales">
             <img src="./img/181.jpg" alt="181 - Eli M / Tarifa">
             <img src="./img/182.jpg" alt="182 - Ander / Frantzia">
@@ -234,9 +234,9 @@
             <img src="./img/220.jpg" alt="220 - Aintzane / Noja">
             <img src="./img/221.jpg" alt="221 - Nerea / Somo">
             <img src="./img/222.jpg" alt="222 - Ainara / Saturraran">
-            <img src="./img/223.jpg" alt="223 - Iñigo / Gerrike">
-            <img src="./img/224.jpg" alt="224 - Iñigo / Gerrike">
-            <img src="./img/225.jpg" alt="225 - Iñigo / Gerrike">
+            <img src="./img/223.jpg" alt="223 - Iñigo / Gerrika">
+            <img src="./img/224.jpg" alt="224 - Iñigo / Gerrika">
+            <img src="./img/225.jpg" alt="225 - Iñigo / Gerrika">
             <img src="./img/226.jpg" alt="226 - Aritz / Baiona">
             <img src="./img/227.jpg" alt="227 - Andoni O">
             <img src="./img/228.jpg" alt="228 - Esti / Cádiz">
@@ -313,7 +313,7 @@
             <img src="./img/299.jpg" alt="299 - Aure / Markina-Xemein">
             <img src="./img/300.jpg" alt="300 - Ander / Deba">
             <img src="./img/301.jpg" alt="301 - Esti / Berriz">
-            <img src="./img/302.jpg" alt="302 - Iñigo / Gerrike">
+            <img src="./img/302.jpg" alt="302 - Iñigo / Gerrika">
             <img src="./img/303.jpg" alt="303 - Nerea / Iruzubitxe">
             <img src="./img/304.jpg" alt="304 - Nerea / Iruzubitxe">
             <img src="./img/305.jpg" alt="305 - Nerea / Iruzubitxe">
@@ -335,7 +335,7 @@
             <img src="./img/321.jpg" alt="321 - Iñigo / Markina-Xemein">
             <img src="./img/322.jpg" alt="322 - Iñigo / Markina-Xemein">
             <img src="./img/323.jpg" alt="323 - Eli E / Markina-Xemein">
-            <img src="./img/324.jpg" alt="324 - Eli E / Gerrike">
+            <img src="./img/324.jpg" alt="324 - Eli E / Gerrika">
             <img src="./img/325.jpg" alt="325 - Eli E / Zierrei">
             <img src="./img/326.jpg" alt="326 - Iñigo / Markina-Xemein">
             <img src="./img/327.jpg" alt="327 - Iñigo / Markina-Xemein">
@@ -415,6 +415,16 @@
             <img src="./img/401.jpg" alt="401 - Jon / Martorell">
             <img src="./img/402.jpg" alt="402 - Jon / Martorell">
             <img src="./img/403.jpg" alt="403 - Jon / Martorell">
+            <img src="./img/404.jpg" alt="404 - Esti / Araia">
+            <img src="./img/405.jpg" alt="405 - Esti / Araia">
+            <img src="./img/406.jpg" alt="406 - Esti / Araia">
+            <img src="./img/407.jpg" alt="407 - Esti / Araia">
+            <img src="./img/408.jpg" alt="408 - Esti / Araia">
+            <img src="./img/409.jpg" alt="409 - Jon / Martorell">
+            <img src="./img/410.jpg" alt="410 - Andoni O / Gollebar">
+            <img src="./img/411.jpg" alt="411 - Iban / Lekitxo">
+            <img src="./img/412.jpg" alt="412 - Itsaso / Deba">
+            <img src="./img/413.jpg" alt="413 - Aiora / Bilbo">
         </section>
         <section id="contenedor-principal">
             <div id="contenedor-interno">
