--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
             <img src="./img/224.jpg" alt="224 - Iñigo / Gerrika">
             <img src="./img/225.jpg" alt="225 - Iñigo / Gerrika">
             <img src="./img/226.jpg" alt="226 - Aritz / Baiona">
-            <img src="./img/227.jpg" alt="227 - Andoni O">
+            <img src="./img/227.jpg" alt="227 - Andoni O / Noja">
             <img src="./img/228.jpg" alt="228 - Esti / Cádiz">
             <img src="./img/229.jpg" alt="229 - Iñigo">
             <img src="./img/230.jpg" alt="230 - Esti">
@@ -425,6 +425,11 @@
             <img src="./img/411.jpg" alt="411 - Iban / Lekitxo">
             <img src="./img/412.jpg" alt="412 - Itsaso / Deba">
             <img src="./img/413.jpg" alt="413 - Aiora / Bilbo">
+            <img src="./img/414.jpg" alt="414 - Jon / Markina-Xemein">
+            <img src="./img/415.jpg" alt="415 - Iñigo / Ondarru">
+            <img src="./img/416.jpg" alt="416 - Itsaso / Eibar">
+            <img src="./img/417.jpg" alt="417 - Iban / Markina-Xemein">
+            <img src="./img/418.jpg" alt="418 - Saioa / Mendexa">
         </section>
         <section id="contenedor-principal">
             <div id="contenedor-interno">
