--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
 	<h1>Faro biribillek</h1>
 	<p><a href="2022/index.html">2022</a></p>
 	<p><a href="2023/index.html">2023</a></p>
+	<p><a href="2024/index.html">2024</a></p>
 </body>
 </html>
